fix sonar - part one